; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecp.c_mbedtls_ecp_muladd.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecp.c_mbedtls_ecp_muladd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ECP_TYPE_SHORT_WEIERSTRASS = common dso_local global i64 0, align 8
@MBEDTLS_ERR_ECP_FEATURE_UNAVAILABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ecp_muladd(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i64 @ecp_get_type(i32* %16)
  %18 = load i64, i64* @ECP_TYPE_SHORT_WEIERSTRASS, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %6
  %21 = load i32, i32* @MBEDTLS_ERR_ECP_FEATURE_UNAVAILABLE, align 4
  store i32 %21, i32* %7, align 4
  br label %47

22:                                               ; preds = %6
  %23 = call i32 @mbedtls_ecp_point_init(i32* %15)
  %24 = load i32*, i32** %8, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = load i32*, i32** %11, align 8
  %27 = call i32 @mbedtls_ecp_mul_shortcuts(i32* %24, i32* %15, i32* %25, i32* %26)
  %28 = call i32 @MBEDTLS_MPI_CHK(i32 %27)
  %29 = load i32*, i32** %8, align 8
  %30 = load i32*, i32** %9, align 8
  %31 = load i32*, i32** %12, align 8
  %32 = load i32*, i32** %13, align 8
  %33 = call i32 @mbedtls_ecp_mul_shortcuts(i32* %29, i32* %30, i32* %31, i32* %32)
  %34 = call i32 @MBEDTLS_MPI_CHK(i32 %33)
  %35 = load i32*, i32** %8, align 8
  %36 = load i32*, i32** %9, align 8
  %37 = load i32*, i32** %9, align 8
  %38 = call i32 @ecp_add_mixed(i32* %35, i32* %36, i32* %15, i32* %37)
  %39 = call i32 @MBEDTLS_MPI_CHK(i32 %38)
  %40 = load i32*, i32** %8, align 8
  %41 = load i32*, i32** %9, align 8
  %42 = call i32 @ecp_normalize_jac(i32* %40, i32* %41)
  %43 = call i32 @MBEDTLS_MPI_CHK(i32 %42)
  br label %44

44:                                               ; preds = %22
  %45 = call i32 @mbedtls_ecp_point_free(i32* %15)
  %46 = load i32, i32* %14, align 4
  store i32 %46, i32* %7, align 4
  br label %47

47:                                               ; preds = %44, %20
  %48 = load i32, i32* %7, align 4
  ret i32 %48
}

declare dso_local i64 @ecp_get_type(i32*) #1

declare dso_local i32 @mbedtls_ecp_point_init(i32*) #1

declare dso_local i32 @MBEDTLS_MPI_CHK(i32) #1

declare dso_local i32 @mbedtls_ecp_mul_shortcuts(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ecp_add_mixed(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ecp_normalize_jac(i32*, i32*) #1

declare dso_local i32 @mbedtls_ecp_point_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
